# CS215_Project_Real_time_privacy_protection_tool

./: CMakeLists.txt  Cpp项目文档.docx  README.md  face_detection_yunet_2023mar.onnx:Zone.Identifier  face_detection_yunet_2023mar.onnxZone.Identifier  yunet
assets/: 透明背景.pngZone.Identifier
include/: FaceDetector.hpp  PrivacyFilter.hpp
src/: FaceDetector.cpp  PrivacyFilter.cpp  main.cpp
